updated styling for body, and email-wrapper to ensure no overflow on x

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,27 @@
-html,
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     background-color: #4BC46F;
-    padding: 0;
-    margin: 0;
+    overflow-x: hidden;
+    display: flex;
+    justify-content: center;
+}
+.email-wrapper {
+    width: 100%;
+    max-width: 600px;
+    /* overflow: hidden; */
 }
 
-header {
+nav {
+    display: flex;
     background-color: #000;
-    width: 600px;
+    width: 100%;
+    max-width: 100%;
     height: 103px;
+    box-sizing: border-box;
 }
 
 .adidas-logo {
